--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "homepage": "https://github.com/rayanHnide-FE1/test",
+  "homepage": "https://github.com/rayanHnide-FE1/test.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
